tolk-tester/tests/invalid-declaration/err-1933.tolk
fun main() {
}

fun onExternalMessage(in: InMessage) {
}

/**
@compilation_should_fail
@stderr `onExternalMessage` should have one parameter `slice`
 */
